--- a/index.html
+++ b/index.html
@@ -15,72 +15,78 @@
 
 <body>
 	<main>
-		<div class="image">
-			<img src="./images/illustration-woman-online-mobile.svg" alt="Illustration of a woman standing opposite to computer" class="image-mobile">
-			<img src="./images/illustration-woman-online-desktop.svg" alt="Illustration of a woman standing opposite to computer" class="image-desktop">
-		</div>
-		<div class="accordion">
-			<h1>faq</h1>
-			<div class="accordion-box">
-				<button class="accordion-btn">
-					How many team members can I invite? <img src="./images/icon-arrow-down.svg" alt="Arrow icon">
-				</button>
-				<div class="accordion-info">
-					<p class="accordion-text">
-						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt at modi velit? Animi, ea
-						deleniti!
-					</p>
+		<section class="card">
+			<div class="image">
+				<img src="./images/illustration-woman-online-mobile.svg"
+					alt="Illustration of a woman standing opposite to computer" class="image-mobile">
+				<img src="./images/illustration-woman-online-desktop.svg"
+					alt="Illustration of a woman standing opposite to computer" class="image-desktop">
+			</div>
+			<div class="accordion">
+				<h1>faq</h1>
+				<div class="accordion-box">
+					<button class="accordion-btn">
+						How many team members can I invite? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
+						alt="Arrow icon">
+					</button>
+					<div class="accordion-info">
+						<p class="accordion-text">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt at modi velit? Animi, ea
+							deleniti!
+						</p>
+					</div>
+				</div>
+
+				<div class="accordion-box">
+					<button class="accordion-btn">
+						What is the maximum file upload size? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+					</button>
+					<div class="accordion-info">
+						<p class="accordion-text">
+							No more than 2GB. All files in your account must fit your allotted storage space.
+						</p>
+					</div>
+				</div>
+
+				<div class="accordion-box">
+					<button class="accordion-btn">
+						How do I reset my password? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+					</button>
+					<div class="accordion-info">
+						<p class="accordion-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat architecto necessitatibus
+							alias
+							soluta, corrupti quae!
+						</p>
+					</div>
+				</div>
+
+				<div class="accordion-box">
+					<button class="accordion-btn">
+						Can I cancel my subscription? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+					</button>
+					<div class="accordion-info">
+						<p class="accordion-text">
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam ea, numquam eius
+							provident mollitia.
+						</p>
+					</div>
+				</div>
+
+				<div class="accordion-box">
+					<button class="accordion-btn">
+						Do you provide additional support? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+					</button>
+					<div class="accordion-info">
+						<p class="accordion-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, asperiores quo alias
+							dolores
+							laudantium repudiandae.
+						</p>
+					</div>
 				</div>
 			</div>
-
-			<div class="accordion-box">
-				<button class="accordion-btn">
-					What is the maximum file upload size? <img src="./images/icon-arrow-down.svg" alt="Arrow icon">
-				</button>
-				<div class="accordion-info">
-					<p class="accordion-text">
-						No more than 2GB. All files in your account must fit your allotted storage space.
-					</p>
-				</div>
-			</div>
-
-			<div class="accordion-box">
-				<button class="accordion-btn">
-					How do I reset my password? <img src="./images/icon-arrow-down.svg" alt="Arrow icon">
-				</button>
-				<div class="accordion-info">
-					<p class="accordion-text">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat architecto necessitatibus alias
-						soluta, corrupti quae!
-					</p>
-				</div>
-			</div>
-
-			<div class="accordion-box">
-				<button class="accordion-btn">
-					Can I cancel my subscription? <img src="./images/icon-arrow-down.svg" alt="Arrow icon">
-				</button>
-				<div class="accordion-info">
-					<p class="accordion-text">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam ea, numquam eius
-						provident mollitia.
-					</p>
-				</div>
-			</div>
-
-			<div class="accordion-box">
-				<button class="accordion-btn">
-					Do you provide additional support? <img src="./images/icon-arrow-down.svg" alt="Arrow icon">
-				</button>
-				<div class="accordion-info">
-					<p class="accordion-text">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, asperiores quo alias dolores
-						laudantium repudiandae.
-					</p>
-				</div>
-			</div>
-		</div>
-
+		</section>
 	</main>
 	<footer>
 		<p>Challenge by <a href="https://www.frontendmentor.io" target="_blank" rel="noopener">Frontend Mentor</a>.
