working on my css and js

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 			<div class="accordion">
 				<h1>faq</h1>
 				<div class="accordion-box">
-					<button class="accordion-btn">
+					<button class="accordion-btn"
+					aria-expanded="undefined">
 						How many team members can I invite? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
-						alt="Arrow icon">
+							aria-hidden="true" alt="">
 					</button>
 					<div class="accordion-info">
 						<p class="accordion-text">
@@ -39,7 +40,8 @@
 
 				<div class="accordion-box">
 					<button class="accordion-btn">
-						What is the maximum file upload size? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+						What is the maximum file upload size? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
+							aria-hidden="true" alt="">
 					</button>
 					<div class="accordion-info">
 						<p class="accordion-text">
@@ -50,7 +52,8 @@
 
 				<div class="accordion-box">
 					<button class="accordion-btn">
-						How do I reset my password? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+						How do I reset my password? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
+							aria-hidden="true" alt="">
 					</button>
 					<div class="accordion-info">
 						<p class="accordion-text">
@@ -63,7 +66,8 @@
 
 				<div class="accordion-box">
 					<button class="accordion-btn">
-						Can I cancel my subscription? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+						Can I cancel my subscription? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
+							aria-hidden="true" alt="">
 					</button>
 					<div class="accordion-info">
 						<p class="accordion-text">
@@ -75,7 +79,8 @@
 
 				<div class="accordion-box">
 					<button class="accordion-btn">
-						Do you provide additional support? <img src="./images/icon-arrow-down.svg" class="arrow-icon" alt="Arrow icon">
+						Do you provide additional support? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
+							aria-hidden="true" alt="">
 					</button>
 					<div class="accordion-info">
 						<p class="accordion-text">
