changed js and css, added readme

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 			<div class="accordion">
 				<h1>faq</h1>
 				<div class="accordion-box">
-					<button class="accordion-btn"
-					aria-expanded="undefined">
+					<button class="accordion-btn">
 						How many team members can I invite? <img src="./images/icon-arrow-down.svg" class="arrow-icon"
 							aria-hidden="true" alt="">
 					</button>
